done header navbar

--- a/index.html
+++ b/index.html
@@ -20,17 +20,107 @@
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item header__navbar-item--separate">Kênh Người Bán</li>
                         <li class="header__navbar-item header__navbar-item--separate">Trở thành Người bán Shopee</li>
-                        <li class="header__navbar-item header__navbar-item--separate">Tải ứng dụng</li>
-                        <li class="header__navbar-item">Kết nối<i class="header__navbar-icon fa-brands fa-facebook"></i><i class="header__navbar-icon fa-brands fa-instagram"></i></li>
+                        <li class="header__navbar-item header__navbar-item--has-qr header__navbar-item--separate">
+                            Tải ứng dụng
+                            <!-- Header QR code -->
+                            <div class="header__qr">
+                                <img src="./assets/img/QRcode.png" alt="QR Code" class="header__qr-img">
+                                <div class="header__qr-apps">
+                                    <a href="" class="header__qr-link">
+                                        <img src="./assets/img/appstore.png" alt="App Store" class="header__qr-download-img">
+                                    </a>
+                                    <a href="" class="header__qr-link">
+                                        <img src="./assets/img/gggplay.png" alt="GG Play" class="header__qr-download-img">
+                                    </a>
+                                    <a href="" class="header__qr-link">                                       
+                                        <img src="./assets/img/appgallery.png" alt="App Gallery" class="header__qr-download-img">
+                                    </a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="header__navbar-item">
+                            <span class="header__navbar-title--no-pointer">Kết nối</span>
+                            <a href="" class="header__navbar-icon-link">
+                                <i class="header__navbar-icon fa-brands fa-facebook"></i>
+                            </a>
+                            <a href="" class="header__navbar-icon-link">
+                                <i class="header__navbar-icon fa-brands fa-instagram"></i>
+                            </a>   
+                        </li>
                     </ul>
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item">
-                            <a href="" class="header__navbar-item-link"><i class="header__navbar-icon fa-regular fa-bell" style="color: #ffffff;"></i>Thông báo</a>
+                        <li class="header__navbar-item header__navbar-item--has-notify">
+                            <a href="" class="header__navbar-item-link">
+                                <i class="header__navbar-icon fa-regular fa-bell" style="color: #ffffff;"></i>
+                                Thông báo
+                            </a>
+                            <div class="header__notify">
+                                <header class="header__notify-header">
+                                    <h3>Thông Báo Mới Nhận</h3>
+                                </header>
+                                <ul class="header__notify-list">
+                                    <li class="header__notify-item">
+                                        <a href="" class="header__notify-link">
+                                            <img src="./assets/img/Uudai.png" alt="" class="header__notify-img">
+                                            <div class="header__notify-info">
+                                                <span class="header__notify-name">Ưu đãi ngày mới</span>
+                                                <span class="header__notify-desc">Tận hưởng ưu đãi đến 20%</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__notify-item">
+                                        <a href="" class="header__notify-link">
+                                            <img src="./assets/img/freeship.png" alt="" class="header__notify-img">
+                                            <div class="header__notify-info">
+                                                <span class="header__notify-name">Freeship</span>
+                                                <span class="header__notify-desc">Freeship những đơn hàng nội thành Hà Nội và TP Hồ Chí Minh</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__notify-item">
+                                        <a href="" class="header__notify-link">
+                                            <img src="./assets/img/giarebatngo.png" alt="" class="header__notify-img">
+                                            <div class="header__notify-info">
+                                                <span class="header__notify-name">Giá rẻ bất ngờ</span>
+                                                <span class="header__notify-desc">Giá rẻ bất ngờ dành cho những khách hàng thân thiết của Shopee</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__notify-item">
+                                        <a href="" class="header__notify-link">
+                                            <img src="./assets/img/voucherhoantien.png" alt="" class="header__notify-img">
+                                            <div class="header__notify-info">
+                                                <span class="header__notify-name">Voucher hoàn tiền</span>
+                                                <span class="header__notify-desc">Nhận voucher hoàn tiền khi thanh toán hoá đơn trên 1 triệu đồng</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__notify-item">
+                                        <a href="" class="header__notify-link">
+                                            <img src="./assets/img/voucherextra.png" alt="" class="header__notify-img">
+                                            <div class="header__notify-info">
+                                                <span class="header__notify-name">Voucher Extra đặc biệt</span>
+                                                <span class="header__notify-desc">Nhận voucher extra đặc biệt khi thanh toán qua ShopeePay</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <footer class="header__notify-footer">
+                                    <a href="" class="header__notify-footer-btn">Xem tất cả</a>
+                                </footer>
+                            </div>
                         </li>
                         <li class="header__navbar-item">
-                            <a href="" class="header__navbar-item-link"><i class="header__navbar-icon fa-regular fa-circle-question"></i>Hỗ trợ</a>              
+                            <a href="" class="header__navbar-item-link">
+                                <i class="header__navbar-icon fa-regular fa-circle-question"></i>
+                                Hỗ trợ
+                            </a>              
                         </li>
-                        <li class="header__navbar-item"><i class="header__navbar-icon fa-solid fa-globe"></i>Tiếng Việt<i class="header__navbar-icon fa-solid fa-caret-down"></i></li>
+                        <li class="header__navbar-item">
+                            <i class="header__navbar-icon fa-solid fa-globe"></i>
+                                Tiếng Việt
+                            <i class="header__navbar-icon fa-solid fa-caret-down"></i>
+                        </li>
                         <li class="header__navbar-item header__navbar-item--separate header__navbar-item--bold">Đăng ký</li>
                         <li class="header__navbar-item header__navbar-item--bold">Đăng nhập</li>
                     </ul>
